crates/seatbelt/src/timeout/snapshots/seatbelt__timeout__layer__tests__config_applies_all_settings.snap
---
source: crates/seatbelt/src/timeout/layer.rs
expression: layer
---
TimeoutLayer {
    context: ResilienceContext {
        clock: Clock {
            kind: "controlled",
            timers: 0,
            alive: true,
            ..
        },
        name: "test_pipeline",
        meter: None,
        logs_enabled: false,
        _in: PhantomData<fn() -> alloc::string::String>,
        _out: PhantomData<fn() -> alloc::string::String>,
    },
    timeout: Some(
        45s,
    ),
    timeout_output: Some(
        TimeoutOutput,
    ),
    on_timeout: None,
    enable_if: Disabled,
    telemetry: TelemetryHelper {
        pipeline_name: "test_pipeline",
        strategy_name: "test",
        event_reporter: None,
        logs_enabled: false,
    },
    timeout_override: None,
    _state: PhantomData<fn(alloc::string::String, seatbelt::typestates::Set, seatbelt::typestates::Set) -> alloc::string::String>,
}
